--- a/starter/main.css
+++ b/starter/main.css
@@ -4,7 +4,14 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Lato', sans-serif;
+    height: 1500px;
+}
+
 /* reusables starts here */
+
+
 button a {
     color: var(--white-color);
     text-decoration: none;
@@ -15,7 +22,129 @@ span a {
     text-decoration: none;
 }
 
+.btn {
+    padding: 15px 20px;
+
+}
+
+.btn-main {
+    background: var(--main-color);
+    color: var(--white-color);
+    border: 2px solid var(--main-color);
+}
+
+.btn-main:hover {
+    background: transparent;
+    /* color: var(--main-color); */
+}
+
 /* reusables ends here */
+
+/* starts here */
+/* ends here */
+
+
+
+/* faq section starts here */
+.faq {
+    width: 90%;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin: 0 auto;
+    text-align: center;
+}
+
+.faqs__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 30px 0;
+}
+
+.faqs__item {
+    max-width: 45%;
+}
+
+.faqs__item h3 {
+    text-align: left;
+    color: var(--main-color-dark);
+    margin: 20px 0;
+    font-weight: bolder;
+}
+
+.faqs__item span {
+    color: var(--main-color);
+    margin: 0 10px 0 0;
+}
+
+.faqs__item p {
+    text-align: justify;
+}
+
+.faq__parallax {
+    /* border: 3px solid tomato; */
+    height: 200px;
+    background: var(--gradient), url('./img/cta.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.faq__parallax h2 {
+    color: var(--white-color);
+    font-size: 30px;
+    font-weight: bold;
+}
+
+/* faq section ends here */
+
+
+/* cta section starts  */
+.cta {
+    padding: 30px 0;
+    text-align: center;
+}
+
+.cta h2 {
+    color: var(--main-color-dark);
+    font-size: 35px;
+    font-weight: bolder;
+}
+
+.cta p {
+    margin: 20px 0;
+}
+
+.cta__input-holder {
+    display: flex;
+    justify-content: center;
+}
+
+.cta input {
+    padding: 15px 10px;
+    border: 2px solid var(--main-color);
+    border-right: none;
+    outline: none;
+    width: 200px;
+    transition: all 1s ease;
+}
+
+.cta input:hover {
+    width: 300px;
+}
+
+.cta button {
+    border: 2px solid var(--main-color);
+    background: var(--main-color);
+    /* background: blue; */
+    color: var(--white-color);
+}
+
+/* cta section end  */
 
 /* Footer section starts here */
 
