--- a/starter/defaults.css
+++ b/starter/defaults.css
@@ -2,9 +2,13 @@
     --main-color: #a82d49;
     --main-color-dark: #43121d;
     --text-color: #777;
+    --light-text-color: rgba(119, 119, 119, 0.3);
     --white-color: #fff;
     --black-color: #000;
     --gradient: linear-gradient(to right, rgba(168, 45, 73, 0.5), rgba(228, 77, 38, 0.5));
+    --gray-gradient: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(171, 186, 171, 0.5));
+
+
 }
 
 /* animations */
