--- a/starter/main.css
+++ b/starter/main.css
@@ -4,9 +4,18 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'custom-Lato';
+    src: url('./font/Lato-Regular.ttf')format('truetype'),
+        url('./font/Lato-Bold.ttf')format('truetype'),
+        url('./font/lato-regular-webfont.woff')format('woff'),
+        url('./font/lato-regular-webfont.woff2')format('woff2');
+}
+
 body {
-    font-family: 'Lato', sans-serif;
+    /* font-family: 'Lato', sans-serif; */
     height: 1500px;
+    font-family: "custom-Lato", sans-serif;
 }
 
 /* reusables starts here */
@@ -44,9 +53,127 @@ span a {
 /* ends here */
 
 
+/* about us section starts here */
+.about-us__banner-holder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* border: 3px solid tomato; */
+    text-align: center;
+    height: 250px;
+    background: var(--gray-gradient), url('./img/about3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+.about-us__banner-holder h2 {
+    color: var(--main-color);
+}
+
+.about-us__banner-holder p {
+    margin: 20px 0;
+}
+
+.btn-waves {
+    margin-top: 20px;
+    font-size: 30px;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    color: var(--white-color);
+    background: var(--main-color);
+    border: 2px solid var(--white-color);
+    /* outline: 10px solid var(--black-color); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* short cut */
+    animation: ripple 2s infinite;
+    /* long cut */
+    /* animation-name: ripple;
+    animation-duration: 2s;
+    animation-iteration-count: infinite; */
+}
+
+/* about us section ends here */
+
+
+/* explore food section starts here */
+.explore-foods {
+    /* border: 3px solid tomato; */
+    padding: 30px 0;
+    border-bottom: 70px solid var(--main-color);
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.explore-foods h2 {
+    color: var(--main-color);
+}
+
+.explore-foods h2+p {
+    margin: 20px 0;
+}
+
+.foodcard-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /* border: 3px solid tomato; */
+}
+
+.foodcard__item {
+    /* border: 3px solid tomato; */
+    width: 320px;
+    overflow: hidden;
+}
+
+.foodcard__image-holder {
+    /* border: 3px solid black; */
+    height: 250px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    overflow: hidden;
+}
+
+.foodcard__image-holder img {
+    width: 100%;
+    height: 100%;
+}
+
+.foodcard__text-holder {
+    text-align: left;
+}
+
+.foodcard__text-holder h4,
+.foodcard__text-holder h3 {
+    margin: 10px 0;
+}
+
+.foodcard__text-holder h3 {
+    border-bottom: 0.5px solid var(--light-text-color);
+    padding-bottom: 10px;
+}
+
+.foodcard__text-holder span {
+    text-decoration: line-through;
+    color: var(--text-color);
+}
+
+.foodcard__text-holder button:hover {
+    color: var(--main-color);
+}
+
+/* explore food section ends here */
+
+
 
 /* faq section starts here */
 .faq {
+    padding-top: 30px;
+    /* border: 3px solid tomato; */
     width: 90%;
     /* margin-left: auto;
     margin-right: auto; */
