--- a/final/main.css
+++ b/final/main.css
@@ -12,9 +12,14 @@
         url('./font/lato-regular-webfont.woff2')format('woff2');
 }
 
+html {
+    scroll-behavior: smooth;
+
+}
+
 body {
     /* font-family: 'Lato', sans-serif; */
-    height: 1500px;
+    /* height: 1500px; */
     font-family: "custom-Lato", sans-serif;
 }
 
@@ -44,17 +49,233 @@ span a {
 
 .btn-main:hover {
     background: transparent;
-    /* color: var(--main-color); */
+    color: var(--main-color);
+}
+
+.btn-light {
+    border: 2px solid var(--main-color);
+    background: transparent;
+}
+
+.btn-light:hover {
+    color: var(--main-color);
+}
+
+.banner-icon {
+    margin-left: 10px;
 }
 
 /* reusables ends here */
 
-/* starts here */
-/* ends here */
+/* header section starts here */
+
+/* nav section starts here */
+.nav-desktop {
+    position: fixed;
+    width: 100%;
+    background: var(--white-color);
+}
+
+.header-logo {
+    top: 0;
+    left: 60px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--main-color);
+    width: 100px;
+    height: 100px;
+    color: var(--white-color);
+    font-size: 50px;
+}
+
+.link-holder {
+    display: flex;
+    /* border: 3px solid tomato; */
+    justify-content: flex-end;
+}
+
+.link-holder button {
+    margin-left: 20px;
+}
+
+.link-holder ul {
+    display: flex;
+    /* border: 3px solid black; */
+    /* width: 500px; */
+}
+
+.link-holder li {
+    list-style: none;
+    border: 2px solid var(--white-color);
+}
+
+.link-holder li:hover {
+    border: 2px solid var(--main-color);
+}
+
+.header-links {
+    display: block;
+    color: var(--main-color);
+    text-decoration: none;
+    padding: 15px 20px;
+}
+
+/* nav section ends here */
+
+
+
+
+
+.header-banner {
+    padding-top: 130px;
+    padding-bottom: 30px;
+    /* border: 3px solid blue; */
+    /* height: 450px; */
+    background: url('./img/banner.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.header-banner__container {
+    height: 100%;
+    /* border: 3px solid black; */
+    width: 90%;
+    margin: 0 auto;
+}
+
+.header-banner-content {
+    /* border: 3px solid blue; */
+    width: 50%;
+}
+
+.header-banner-content h1 {
+    color: var(--main-color-dark);
+    font-size: 45px;
+    line-height: 1.1;
+    font-weight: 300;
+}
+
+.header-banner-content p {
+    margin: 20px 0;
+    color: var(--text-color);
+    line-height: 1.6;
+}
+
+.header-banner-content button {
+    margin-right: 10px;
+}
+
+
+
+
+.header__counter {
+    display: flex;
+    background: var(--main-color);
+    justify-content: space-evenly;
+    padding: 20px 0;
+
+}
+
+.counter-item {
+    text-align: center;
+    color: var(--white-color);
+    width: 180px;
+    /* height: 90px; */
+    /* border: 3px solid var(--white-color); */
+}
+
+.counter-item h2 {
+    font-size: 28px;
+    font-weight: bolder;
+    margin-bottom: 5px;
+}
+
+/* tutorial purposees only  */
+/* .counter-item p {
+    text-transform: lowercase;
+} */
+
+/* header section ends here */
 
 
 /* about us section starts here */
+
+.about-us__card-container {
+    width: 90%;
+    padding: 30px 0;
+    margin: 0 auto;
+    /* border: 3px solid tomato; */
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-us__card-imageholder {
+    border-radius: 30px;
+    height: 350px;
+    width: 48%;
+    /* border: 3px solid black; */
+    overflow: hidden;
+}
+
+.about-us__card-imageholder img {
+    height: auto;
+    width: 100%;
+
+    /* tutorial purposes */
+    /* height: 100%; */
+    /* object-fit: contain; */
+    /* width: 100%;  */
+
+}
+
+.about-us__text-contentholder {
+    height: 350px;
+    width: 48%;
+    /* border: 3px solid blue; */
+}
+
+.about-us__text-contentholder ul {
+    margin-bottom: 20px;
+}
+
+.about-us__text-contentholder li {
+    list-style: none;
+}
+
+.check-icon {
+    color: var(--main-color);
+    margin-right: 15px;
+    font-weight: bolder;
+    font-size: 23px;
+}
+
+.about-us__text-contentholder h2 {
+    color: var(--main-color);
+    background: var(--light-text-color);
+    border-left: 5px solid var(--main-color);
+    border-right: 5px solid var(--main-color);
+    padding: 10px;
+    font-size: 28px;
+}
+
+.about-us__text-contentholder p {
+    margin: 20px 0;
+}
+
+.about-us__text-contentholder button:hover {
+    color: var(--main-color);
+}
+
+.cardicon {
+    margin-left: 10px;
+}
+
+
+
 .about-us__banner-holder {
+    padding: 30px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,6 +290,7 @@ span a {
 
 .about-us__banner-holder h2 {
     color: var(--main-color);
+    font-size: 30px;
 }
 
 .about-us__banner-holder p {
