--- a/final/defaults.css
+++ b/final/defaults.css
@@ -5,6 +5,7 @@
     --light-text-color: rgba(119, 119, 119, 0.1);
     --white-color: #fff;
     --black-color: #000;
+    --box-shadow: 10px 2px 5px rgba(0, 0, 0, 0.05);
     --gradient: linear-gradient(to right, rgba(168, 45, 73, 0.5), rgba(228, 77, 38, 0.5));
     --gray-gradient: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(171, 186, 171, 0.5));
 
